Assigned Product Pages, Update Headers on some page

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         <ul>
           <li><a class="active " href="index.html">主页</a></li>
           <li><a href="about.html">关于</a></li>   
-          <li class="dropdown"><a href="#"><span>产品</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="blog.html"><span>产品</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">微水检测仪</a></li>
+              <li><a href="blog-single.html">微水检测仪</a></li>
               <li><a href="#">乳化测定仪</a></li>
               <li><a href="#">锈蚀测定仪</a></li>
               <li><a href="#">燃点测定仪</a></li>
