--- a/blog.html
+++ b/blog.html
@@ -43,37 +43,33 @@
     <div class="container d-flex justify-content-between align-items-center">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>Moderna</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>山东魁硕电气科技有限公司</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="" href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="team.html">Team</a></li>
-          <li><a class="active" href="blog.html">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="active " href="index.html">主页</a></li>
+          <li><a href="about.html">关于</a></li>   
+          <li class="dropdown"><a href="blog.html"><span>产品</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="blog-single.html">微水检测仪</a></li>
+              <li><a href="#">乳化测定仪</a></li>
+              <li><a href="#">锈蚀测定仪</a></li>
+              <li><a href="#">燃点测定仪</a></li>
+              <li><a href="#">电强测定仪</a></li>
+              <li><a href="#">张力测定仪</a></li>
+              <li><a href="#">闪点测定仪</a></li>
+              <li><a href="#">粘度测定仪</a></li>
+              <li><a href="#">酸值测定仪</a></li>
+              <li><a href="#">凝点测定仪</a></li>
+              <li><a href="#">电阻测定仪</a></li>
+              <li><a href="#">自动震荡仪</a></li>
             </ul>
           </li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="portfolio.html">资质</a></li>
+          <li><a href="contact.html">联系方式</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -88,11 +84,11 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Blog</h2>
+          <h2>产品总览</h2>
 
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Blog</li>
+            <li><a href="index.html">主页</a></li>
+            <li>产品总览</li>
           </ol>
         </div>
 
