--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Moderna Bootstrap Template</title>
+  <title>Portfolio Page</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -90,9 +90,9 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Portfolio Details</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li>Portfolio Details</li>
+            <li><a href="index.html">主页</a></li>
+            <li><a href="portfolio.html">资质</a></li>
+            <li>我们的资质</li>
           </ol>
         </div>
 
