--- a/portfolio.html
+++ b/portfolio.html
@@ -84,10 +84,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Our Portfolio</h2>
+          <h2>资质</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Our Portfolio</li>
+            <li><a href="index.html">主页</a></li>
+            <li>我们的资质</li>
           </ol>
         </div>
 
@@ -101,10 +101,9 @@
         <div class="row">
           <div class="col-lg-12">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter="*" class="filter-active">所有</li>
+              <li data-filter=".filter-app">营业</li>
+              <li data-filter=".filter-card">银行</li>
             </ul>
           </div>
         </div>
